# Octopus

./: .gitignore  LICENSE  Octopus.cabal  README.md  stack.yaml
App/: Main.hs
Common/: A1_CLI.hs  A2_Configuration.hs  A_Infrastructure.hs  B_Status.hs
