name:                Octopus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MxmUrw/Octopus#readme
license:             BSD3
license-file:        LICENSE
author:              Maxim Urschumzew
maintainer:          example@example.com
copyright:           2017 Maxim Urschumzew
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      Common
  exposed-modules:     A_Infrastructure
  other-modules:       A1_CLI
                     , A2_Configuration
                     , B_Status
  build-depends:       base >= 4.7 && < 5
                     , dhall
                     , optparse-applicative
                     , cryptonite
                     , filemanip
                     , time
                     , directory
                     , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DeriveGeneric
                     , DuplicateRecordFields


executable octo
  hs-source-dirs:      App
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Octopus
  default-language:    Haskell2010

test-suite Octopus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Octopus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MxmUrw/Octopus
